--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -2,11 +2,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto";
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  color: #2c3e50;
 }
 li {
   list-style: none;
+  font-weight: bold;
+  color: #2c3e50;
 }
-h1 {
-  color: blue;
+a {
+  text-decoration: none;
 }
