--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,4 @@
 @import "./components/banner";
 @import "./components/featureItem";
 @import "./components/footer";
+@import "./components/signInContent";
