header for user connexion

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -11,9 +11,11 @@
   }
   a {
     display: flex;
+    margin-left: 10px;
   }
   ul {
-    width: 80px;
+    width: 180px;
+    display: flex;
   }
   li {
     margin-left: 5px;
