--- a/src/styles/components/_featureItem.scss
+++ b/src/styles/components/_featureItem.scss
@@ -4,7 +4,6 @@
   flex: 1;
   padding: 2.5rem;
   align-items: center;
-  justify-content: center;
 
   img {
     width: 152px;
@@ -28,4 +27,9 @@
 }
 .features {
   display: flex;
+}
+@media (max-width: 920px) {
+  .features {
+    flex-direction: column;
+  }
 }
