Header user done and title user page

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -13,11 +13,11 @@
     display: flex;
     margin-left: 10px;
   }
-  ul {
-    width: 180px;
-    display: flex;
-  }
+
   li {
     margin-left: 5px;
+  }
+  .link {
+    display: flex;
   }
 }
