components of user page is done

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,4 +4,5 @@
 @import "./components/featureItem";
 @import "./components/footer";
 @import "./components/signInContent";
+@import "./components/account";
 @import "./pages/user";
