--- a/src/styles/pages/_user.scss
+++ b/src/styles/pages/_user.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
   h1 {
     color: white;
     text-align: center;
