--- a/src/styles/pages/_user.scss
+++ b/src/styles/pages/_user.scss
@@ -19,3 +19,21 @@
   color: #fff;
   font-weight: bold;
 }
+.edit-button-modify {
+  width: 89px;
+  height: 39px;
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #fff;
+  font-weight: bold;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+.edit-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  input {
+    margin-right: 10px;
+  }
+}
