responsive account in page user

--- a/src/styles/components/_account.scss
+++ b/src/styles/components/_account.scss
@@ -47,3 +47,9 @@
   background-color: #00bc77;
   color: #fff;
 }
+@media (max-width: 720px) {
+  .account {
+    flex-direction: column;
+    height: 100%;
+  }
+}
