--- a/src/styles/components/_signInContent.scss
+++ b/src/styles/components/_signInContent.scss
@@ -63,3 +63,9 @@
   padding: 5px;
   font-size: 1.2rem;
 }
+@media (max-width: 720px) {
+  .background-content {
+    height: 100%;
+    padding-bottom: 40px;
+  }
+}
