Update css responsive

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -27,8 +27,8 @@
       margin-left: 0;
     }
     .main-nav {
-      padding: 5px 10px;
-      justify-content: flex-start;
+      padding: 5px 15px;
+      justify-content: space-between;
     }
     .sign-out {
       margin-left: 10px;
